# SFMLInGameConsole

./: .gitignore  .gitmodules  QuakeStyleConsole.h  README.md  RichText.cpp  SFMLQuakeConsole.h
demos/: CMakeLists.txt  consoleTest.cpp  guiTest.cpp  imguiDemo.cpp  sfmlDemo.cpp
include/: ConsoleBuffer.hpp  IMGUIQuakeConsole.h  QuakeStyleConsole.h  RichText.hpp  SFMLInGameConsole.h  SFMLInGameConsole.hpp
src/: SFMLInGameConsole.cpp
